--- a/apps/web/src/locales/resources/zh-Hans.json
+++ b/apps/web/src/locales/resources/zh-Hans.json
@@ -16,15 +16,15 @@
   "settings": {
     "region": {
       "title": "服务器：{{region}}",
-      "jp": "日服",
-      "intl": "国际服",
-      "cn": "国服",
+      "jp": "日本",
+      "intl": "国际",
+      "cn": "中国",
       "_generic": "通用"
     },
     "version-and-region": {
-      "select": "选择 DXData 数据版本与服务器",
-      "select-generic": "或，仅选择 DXData 数据版本并使用「通用」服务器",
-      "info": "不同的数据版本与服务器对应了不同的谱面定数与乐曲可见性"
+      "select": "请选择 DXData 数据版本与服务器",
+      "select-generic": "或仅选择 DXData 数据版本",
+      "info": "不同的数据版本与服务器对应了不同的乐曲与谱面定数可见性"
     },
     "import-provider": {
       "diving-fish": {
@@ -58,7 +58,7 @@
         "total": "总计",
         "touch": "Touch"
       },
-      "regional-availability": "区域可用性",
+      "regional-availability": "可游玩地区",
       "song-artist": "作曲",
       "title": "详细信息"
     },
@@ -66,7 +66,7 @@
       "empty": "无可用历史记录",
       "title": "谱面定数历史"
     },
-    "release-date": "追加日 {{absoluteDate}} ({{relativeDate}})",
+    "release-date": "乐曲上线日 {{absoluteDate}} ({{relativeDate}})",
     "filter": {
       "title": "筛选",
       "internal-level-value": {
@@ -75,7 +75,7 @@
         "title": "定数"
       },
       "version": {
-        "title": "追加版本",
+        "title": "乐曲上线版本",
         "gesture-hint": {
           "tap": "切换",
           "tap-hold": "单选"
@@ -100,7 +100,7 @@
         "asc": "追加日期 (旧→新)",
         "desc": "追加日期 (新→旧)"
       },
-      "temporarily-disabled": "暂时停用：活跃的搜索查询"
+      "temporarily-disabled": "搜索关键词已输入，排序功能暂时关闭"
     },
     "sort-and-filter": {
       "title": "筛选与排序",
@@ -146,10 +146,10 @@
   "form": {
     "validation": {
       "max": {
-        "message": "“{{fieldName}}”必须小于或等于 {{value}}"
+        "message": "有效的定数必须小于或等于 {{value}}"
       },
       "min": {
-        "message": "“{{fieldName}}”必须大于或等于 {{value}}"
+        "message": "有效的定数必须大于或等于 {{value}}"
       }
     }
   },
