--- a/apps/web/src/locales/resources/ja.json
+++ b/apps/web/src/locales/resources/ja.json
@@ -129,6 +129,11 @@
     "disclaimer": {
       "title": "免責事項",
       "content": "『DXRating』 はどのゲーム会社とも提携していません。本サイトは素材の権利を所有しておらず、全ての権利が株式会社SEGAを含む該当する権利所有者に帰属します。本サイトは研究を目的としたファンメイドのデータベースであり、株式会社SEGAとは一切関係ありません。当サイトは、掲載されている情報の利用により生じたいかなる損失、損害についても責任を負いかねます。ご不明点がございましたら、当サイト作者までご連絡ください。"
+    },
+    "donate": {
+      "title": "寄付する",
+      "content": "DXRatingが何らかの形でお役に立てればとても嬉しいです！DXRatingは常に完全に無料で提供され、寄付のみで運営されます。もしDXRatingが役に立つと感じたら、<afdian />を通じてサポートを検討してください！",
+      "afdian": "Afdian"
     }
   },
   "form": {
