--- a/apps/web/src/locales/resources/ja.json
+++ b/apps/web/src/locales/resources/ja.json
@@ -165,5 +165,77 @@
       "label": "パスワードを更新する",
       "toast-success": "パスワードが更新されました"
     }
+  },
+  "breakdown": {
+    "title": "レーティング内訳"
+  },
+  "auto-save": {
+    "title": "自動保存",
+    "saved-records": "{{count}}件の記録を保存しました"
+  },
+  "quick-actions": {
+    "title": "クイックアクション",
+    "show-only-b50": "B50のみを表示",
+    "compact-mode": "コンパクトモード"
+  },
+  "table": {
+    "no-entries": "記録がありません",
+    "headers": {
+      "chart": "譜面",
+      "included-in": "収録",
+      "achievement-rate": "達成率",
+      "rating": "レーティング",
+      "actions": "操作"
+    },
+    "remove-dialog": {
+      "title": "記録を削除しますか？",
+      "cancel": "キャンセル",
+      "remove": "削除"
+    }
+  },
+  "rating-calculator": {
+    "statistics": {
+      "total": "合計",
+      "best-15": "ベスト15",
+      "best-35": "ベスト35",
+      "entries": "記録 {{current}}/{{total}}",
+      "subtotal": "小計",
+      "min": "最小",
+      "avg": "平均",
+      "max": "最大"
+    },
+    "add-entry": {
+      "chart": "譜面",
+      "achievement-rate": "達成率",
+      "validation": {
+        "required": "必須項目です",
+        "invalid-number": "無効な数値です",
+        "range": "0%から101%の間で入力してください"
+      },
+      "current-rating": "現在のレーティング",
+      "new-rating": "新しいレーティング",
+      "rating": "レーティング",
+      "replace": "更新 (+{{diff}})",
+      "add": "追加"
+    },
+    "io": {
+      "export": {
+        "button": "エクスポート...",
+        "to-json": "JSONにエクスポート"
+      },
+      "import": {
+        "button": "インポート..."
+      },
+      "clear": {
+        "button": "クリア",
+        "dialog": {
+          "title": "全ての記録を削除しますか？",
+          "warning": "警告",
+          "message": "全ての記録が削除されます。",
+          "cancel": "キャンセル",
+          "confirm": "クリア"
+        }
+      }
+    }
   }
 }
